# bswmview

./: .gitignore  CLAUDE.md  README.md  electron-builder.yml  index.html  main.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml
docs/: architecture.md
electron/: main.ts  preload.ts
public/: BswM.arxml
src/: App.vue  main.ts
src/components/: BswMGraph.vue  DetailPanel.vue  EntityDetailRender.ts  Sidebar.vue  Toolbar.vue
src/components/nodes/: ActionListNode.vue  ActionNode.vue  BaseNodeProps.ts  ConditionNode.vue  ExpressionNode.vue  RequestPortNode.vue  RuleNode.vue
src/composables/: useGraphFilter.ts  usePlatform.ts
src/constants/: graph-styles.ts  layers.ts
src/core/: index.ts
src/core/graph/: chain-tracer.ts  graph-builder.ts  layout.ts
src/core/parser/: arxml-parser.ts
src/graph/: chain-tracer.ts  graph-builder.ts  layout.ts
src/graph/nodes/: ActionListNode.vue  ActionNode.vue  ConditionNode.vue  ExpressionNode.vue  RequestPortNode.vue  RuleNode.vue
src/parser/: arxml-parser.ts
src/stores/: bswm-store.ts
src/styles/: global.css
src/types/: bswm.ts  electron.d.ts  graph.ts
src/utils/: platform.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: commands.rs  lib.rs  main.rs
