[package]
name = "bswm-view"
version = "1.0.0"
description = "AUTOSAR BswM 配置可视化工具"
authors = ["BswM Viewer"]
edition = "2021"

[[bin]]
name = "BswMView"
path = "src/main.rs"

[lib]
name = "bswm_view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
